changed preview picture

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="image" property="og:image" content="%PUBLIC_URL%/monkey.png">
+    <meta name="image" property="og:image" content="https://media-exp1.licdn.com/dms/image/sync/C5627AQHNVtZFFnbOsA/articleshare-shrink_480/0/1651807597341?e=1653066000&v=beta&t=HyOJqc4aF9vCuJyrrCTLLkHmAePFbMyS2aI-vyk0Kmo">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/monkey.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
